// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the pressed IconAIFixesButton matches the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  min-width: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border: 1px solid #ccc;
  background-color: linear- gradient(to bottom right,#A61E69,#3B82F6);
  box-shadow: inset 0 2px 0 rgba( 93,35,122,0.7 );
  border-radius: 3px;
  cursor: pointer;
  padding: 0;
  height: 24px;
}

.c0:disabled {
  background-color: linear-gradient(to bottom right,#FAF3F7,#EFF6FF);
  box-shadow: none;
  border: none;
  cursor: default;
}

.c1 {
  overflow: hidden;
  border: none;
  background-image: linear-gradient(to bottom right,#A61E69,#6366F1) !important;
  box-shadow: inset 0 -2px 0 #B94986;
}

.c1:hover {
  background-image: linear-gradient(to bottom right,#A61E69,#6366F1) !important;
}

@supports ((border-image:linear-gradient(to bottom right,#CD82AB,#A5B4FC) 1) and (border-radius:3px)) {
  .c1 {
    border: none;
    border-image: none;
  }
}

<button
  aria-label="Fix with AI"
  aria-pressed={true}
  className="c0 c1 yoast-tooltip yoast-tooltip-w"
  disabled={false}
  id="keyphraseInIntroductionAIFixes"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  type="button"
/>
`;

exports[`the unpressed IconAIFixesButton matches the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  min-width: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border: 1px solid #ccc;
  background-color: linear-gradient(to bottom right,#FAF3F7,#EFF6FF);
  box-shadow: 0 1px 0 rgba( 204,204,204,0.7 );
  border-radius: 3px;
  cursor: pointer;
  padding: 0;
  height: 24px;
}

.c0:disabled {
  background-color: linear-gradient(to bottom right,#FAF3F7,#EFF6FF);
  box-shadow: none;
  border: none;
  cursor: default;
}

.c1 {
  overflow: hidden;
  border: 1px solid #A5B4FC;
  background-image: linear-gradient(to bottom right,#FAF3F7,#EEF2FF) !important;
  box-shadow: 0 1px 0 rgba( 204,204,204,0.7 );
}

.c1:hover {
  background-image: linear-gradient(to bottom right,#F3E5ED,#E0E7FF) !important;
}

@supports ((border-image:linear-gradient(to bottom right,#CD82AB,#A5B4FC) 1) and (border-radius:3px)) {
  .c1 {
    border: 1px solid transparent;
    border-image: linear-gradient(to bottom right,#CD82AB,#A5B4FC) 1;
  }
}

<button
  aria-label="Fix with AI"
  aria-pressed={false}
  className="c0 c1 yoast-tooltip yoast-tooltip-w"
  disabled={true}
  id="keyphraseDensityAIFixes"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  type="button"
/>
`;
